# FractalQuant

./: .gitignore  README.md  pyproject.toml
FractalQuant/: DATA_FETCHING_GUIDE.md  README.md  examples.py  examples_data_fetching.py  main.py  requirements.txt  run_strategy.py  test_data_fetching.py
docs/: FACTOR_GENERATION_HANDOVER.md
research/: intraday_strategy_reports_factor_supplements.md  report_475_factor_and_strategy_recommendations.md  report_475_review_ledger.csv  short_cycle_reports_factor_supplements.md
scripts/: audit_etf_minute_factor_quality.py  bond_etf_universe.txt  build_etf_orderbook_panel.py  generate_auction_factors.py  generate_etf_advanced_factor.py  generate_etf_cicc_minute_factors.py  generate_etf_fz_minute_factors.py  generate_etf_minute_factors.py  generate_etf_noise_bound_ratio_factors.py  generate_etf_orderbook_factors.py  generate_intraday_strategy_factors.py  generate_stock_advanced_factor.py  generate_stock_orderbook_factors.py  goods_etf_universe.txt  hk_etf_universe.txt  joinquant_volume_weighted_price_etf_strategy.py  overseas_etf_universe.txt  run_etf_factor_tradable_backtest.py  run_etf_factor_validation_backtest.py  run_etf_joinquant_aligned_backtest.py  run_stock_advanced_factor_low_turnover_backtest.py  run_volume_weighted_price_low_turnover_backtest.py  small_etf_universe_50_latest_longest.txt  small_t0_goods_hk_overseas_etf_universe.txt  symbols_example.txt
tests/: test_auction_factor_generator.py  test_etf_minute_multiwindow_factors.py  test_fractional_diff_factor.py  test_intraday_strategy_factors.py  (+7 more)
(+38 files in other folders)
