[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractalquant"
version = "0.1.0"
description = "Local factor generation and backtesting utilities for FractalQuant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "ccxt>=2.0.0",
    "python-dotenv>=0.19.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "backtrader>=1.9.0",
    "TA-Lib>=0.4.24",
    "requests>=2.26.0",
    "aiohttp>=3.7.4",
    "websockets>=10.0",
    "yfinance>=0.1.63",
    "alpha-vantage>=2.3.1",
    "finnhub-python>=1.2.14",
    "polygon-api-client>=0.3.2",
    "crypto-compare>=0.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=0.4.4",
    "google-auth-httplib2>=0.0.1",
    "nltk>=3.6.3",
    "textblob>=0.15.3",
    "vaderSentiment>=3.3.2",
]

[tool.setuptools]
package-dir = {"" = "FractalQuant"}

[tool.setuptools.packages.find]
where = ["FractalQuant"]

